fix: header's spacing for desktop

--- a/src/containers/Header/style.scss
+++ b/src/containers/Header/style.scss
@@ -22,6 +22,12 @@
         background-color: transparent;
     }
 
+    @media (min-width: 521px) {
+        .desktop-nav-container {
+            justify-content: space-around;
+        }
+    }
+
     @media (min-width: 781px) {
         img {
             width: 100px;
